fixed nav alignment issue

--- a/css/index.css
+++ b/css/index.css
@@ -190,12 +190,18 @@ footer {
   justify-content: center;
   align-items: center;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .nav-header {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   background: #e8f1ff;
+  max-width: 900px;
   width: 90vw;
   margin: 2% 2% 0 2%;
 }
