--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,8 +1,15 @@
 // Home Content
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .nav-header {
   .flex (column, space-around);
   align-items: center;
   background: #e8f1ff;
+  max-width: 900px;
   width: 90vw;
   margin: 2% 2% 0 2%;
 
